--- a/src/main/resources/templates/books-table.html
+++ b/src/main/resources/templates/books-table.html
@@ -52,6 +52,13 @@
                     <span>categories table</span></a>
             </li>
 
+            <!-- Nav Item - Tables -->
+            <li class="nav-item active">
+                <a class="nav-link" href="/dashboard/orders">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>orders table</span></a>
+            </li>
+
         </ul>
         <!-- End of Sidebar -->
 
