--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -34,6 +34,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" ><i class="fa-solid fa-gift" style="margin-right: 6%;"></i>Book store</a>
             <a href="/cart" style="color: mediumblue;">  <i style="margin-right: 1%;" class="fa-solid fa-cart-shopping justify-content-end fa-xl" ></i></a>
+            <a href="/my-orders" class="fa-solid fa-gift" style="margin-right: 6%;">my orders</a>
         </div>
     </nav>
 
